# mcu_remake

./: CMakeLists.txt  alsa_device.cpp  alsa_device.h  audio_format.h  audio_resampler.cpp  audio_resampler.h  data_queue.cpp  data_queue.h  main.cpp  qt2_kv.xml
audio_test/: CMakeLists.txt  main.cpp
liblargo/: CMakeLists.txt
liblargo/core/core-tools/: logging.h
liblargo/core/media/audio/: audio_composer.cpp  audio_composer.h  audio_dispatcher.cpp  audio_dispatcher.h  audio_divider.cpp  audio_divider.h  audio_format.cpp  audio_format.h  audio_frame.cpp  audio_frame.h  audio_frame_converter.cpp  audio_frame_converter.h  audio_frame_normalizer.cpp  audio_frame_normalizer.h  audio_mixer.cpp  audio_mixer.h  audio_mux.cpp  audio_mux.h  audio_point.cpp  audio_point.h  audio_queue.cpp  audio_queue.h  audio_resampler.cpp  audio_resampler.h  audio_server.cpp  audio_server.h  audio_slot.cpp  audio_slot.h  audio_stream.cpp  audio_stream.h  audio_string_format_utils.cpp  audio_string_format_utils.h  i_audio_composer.h  i_audio_formatter.h  i_audio_mixer.h  i_audio_point.h  i_audio_processing.h  i_audio_server.h  i_audio_slot.h  i_audio_stream.h  (+7 more)
liblargo/core/media/audio/channels/: audio_channel.cpp  audio_channel.h  audio_channel_params.cpp  audio_channel_params.h  audio_channel_worker.cpp  audio_channel_worker.h  i_audio_channel.h
liblargo/core/media/audio/tools/: audio_event_server.cpp  audio_event_server.h  audio_processor.cpp  audio_processor.h
liblargo/core/media/common/: codec_params.cpp  codec_params.h  data_queue.cpp  data_queue.h  delay_timer.cpp  delay_timer.h  device_info.cpp  device_info.h  frame_normalizer.cpp  frame_normalizer.h  guard_lock.cpp  guard_lock.h  i_data_collection.h  i_data_queue.h  i_input_media_device.h  i_media_buffer.h  i_media_channel.h  i_media_control.h  i_media_device.h  i_media_device_control.h  i_media_device_manager.h  i_media_filter.h  i_media_frame.h  i_media_frame_converter.h  i_media_frame_normalizer.h  i_media_frame_transcoder.h  i_media_plane.h  i_media_point.h  i_media_queue.h  i_media_sink.h  i_media_sink_aggregator.h  i_media_slot.h  i_media_source.h  i_media_stream.h  i_media_track.h  i_multipoint_data_queue.h  i_output_media_device.h  i_process_state_notifier.h  i_sync_point.h  libav_input_media_device.cpp  (+41 more)
liblargo/core/media/common/base/: filesystem.cpp  filesystem.h  frame_base.cpp  frame_base.h  string_base.cpp  string_base.h  variant.cpp  variant.h  variant_value.cpp  variant_value.h
liblargo/core/media/common/ffmpeg/: libav_base.cpp  libav_base.h  libav_converter.cpp  libav_converter.h  libav_decoder.cpp  libav_decoder.h  libav_filter.cpp  libav_filter.h  libav_stream_capturer.cpp  libav_stream_capturer.h  libav_stream_publisher.cpp  libav_stream_publisher.h  libav_transcoder.cpp  libav_transcoder.h  libav_utils.cpp  libav_utils.h  test_libav_filter.cpp  test_libav_filter.h
liblargo/core/media/common/magick/: magick_base.cpp  magick_base.h
liblargo/core/media/common/opencv/: cv_base.cpp  cv_base.h
liblargo/core/media/common/qt/: qt_base.cpp  qt_base.h
liblargo/core/media/common/serial/: serial_api.cpp  serial_api.h  serial_base.h  serial_device.cpp  serial_device.h
liblargo/core/media/common/utils/: format_converter.cpp  format_converter.h
liblargo/core/media/common/v4l2/: v4l2_api.cpp  v4l2_api.h  v4l2_base.cpp  v4l2_base.h  v4l2_device.cpp  v4l2_device.h
liblargo/core/media/common/visca/: visca_base.cpp  visca_base.h  visca_device.cpp  visca_device.h  visca_test.cpp
liblargo/core/media/common/vnc/: vnc_base.cpp  vnc_base.h  vnc_device.cpp  vnc_device.h
liblargo/core/media/video/: i_video_frame.h  i_video_frame_builder.h  i_video_frame_factory.h  i_video_layout_manager.h  video_composer.cpp  video_composer.h  video_format.cpp  video_format.h  video_frame.cpp  video_frame.h  video_frame_buffered.cpp  video_frame_buffered.h  video_frame_builder.cpp  video_frame_builder.h  video_frame_converter.cpp  video_frame_converter.h  video_frame_factory.cpp  video_frame_factory.h  video_frame_normalizer.cpp  video_frame_normalizer.h  video_frame_point.cpp  video_frame_point.h  video_frame_processor.cpp  video_frame_processor.h  video_frame_rect.cpp  video_frame_rect.h  video_frame_size.cpp  video_frame_size.h  video_layout_manager_auto.cpp  video_layout_manager_auto.h  video_layout_manager_custom.cpp  video_layout_manager_custom.h  video_utils.cpp  video_utils.h
liblargo/core/media/video/filters/: i_video_layer.h  video_filter.cpp  video_filter.h  (+12 more)
liblgcodec/: CMakeLists.txt  i_codec.h  main.cpp
liblgcodec/codec/audio/: audio_codec.cpp  audio_codec.h  audio_codec_options.cpp  audio_codec_options.h  audio_codec_types.h  audio_codec_utils.cpp  audio_codec_utils.h  audio_packetizer.cpp  audio_packetizer.h  i_audio_codec.h
liblgcodec/codec/audio/aac/: aac_audio_codec_options.cpp  aac_audio_codec_options.h  aac_audio_packetizer.cpp  aac_audio_packetizer.h  aac_audio_transcoder.cpp  aac_audio_transcoder.h  aac_codec_options.cpp  aac_codec_options.h  aac_types.h  acc_audio_transcoder.cpp  acc_audio_transcoder.h  au_builder.cpp  au_builder.h  au_packet.cpp  au_packet.h  au_packetizer.cpp  au_packetizer.h  au_types.h
liblgcodec/codec/audio/av/: av_codec.cpp  av_codec.h  av_decoder.cpp  av_decoder.h  av_encoder.cpp  av_encoder.h
liblgcodec/codec/audio/libav/: av_codec.cpp  av_codec.h  libav_audio_transcoder.cpp  libav_audio_transcoder.h  libav_wrapper.cpp  libav_wrapper.h
liblgcodec/codec/common/: codec_options.cpp  codec_options.h  i_codec.h  i_codec_control.h  i_codec_module.h  i_codec_options.h  i_codec_transcoder.h  i_packetizer.h  media_packetizer.cpp  media_packetizer.h
liblgcodec/common/: bit_stream.cpp  bit_stream.h  bit_stream.tpp  i_options.h  options.cpp  options.h  options_helper.cpp  options_helper.h  options_helper.tpp
synth_test/: CMakeLists.txt  main.cpp  synth_form.cpp  synth_form.h  synth_form.ui
video_test/: CMakeLists.txt  main.cpp  rgb_video_buffer.cpp  rgb_video_buffer.h  video_form.cpp  video_form.h  video_form.ui  video_surface.cpp  video_surface.h  yuv_video_buffer.cpp  yuv_video_buffer.h
(+94 files in other folders)
